@@ -1,3 +1,9 @@
+2004-02-27  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* elflink.h (sort_symbol): New.
+	(elf_link_add_object_symbols): Use a sorted symbol array for
+	weakdef.
+
 2004-02-27  Jakub Jelinek  <jakub@redhat.com>
 
 	* elf32-s390.c (allocate_dynrelocs): Use SYMBOL_REFERENCES_LOCAL
